--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Azeret Mono", monospace;
+    /* font-optical-sizing: auto; */
+    font-weight: 400;
+    font-style: normal;
 }
 h1, h2, h3, h4, h5, h6, p, ul{
     margin: 0;
@@ -11,4 +15,45 @@ a, a:hover{
 }
 li{
     list-style: none;
+}
+
+
+/*===== header styles starts =====*/
+header{
+    width: 100%;
+    height: 650px;
+    background-image: url('../assets/Hero-bg.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .headerSection{
+    width: 650px;
+    text-align: center;
+}
+header .headerSection img{
+    width: 240px;
+    margin-bottom: 20px;
+}
+header .headerSection h1{
+    font-size: 30px;
+    font-weight: 700;
+}
+header .headerSection p{
+    /* font-size: 16px; */
+    margin: 20px 0;
+    color: rgb(26, 34, 53);
+}
+header .headerSection button{
+    padding: 12px 25px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 1);
+    color: #ffffff;
+    font-weight: 500;
 }
