--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ li{
 }
 
 
-/*===== header styles starts =====*/
+/* ===== header styles starts ===== */
 header{
     width: 100%;
     height: 650px;
@@ -46,7 +46,7 @@ header .headerSection h1{
 header .headerSection p{
     /* font-size: 16px; */
     margin: 20px 0;
-    color: rgb(26, 34, 53);
+    color: rgb(45, 51, 65);
 }
 header .headerSection button{
     padding: 12px 25px;
@@ -56,4 +56,71 @@ header .headerSection button{
     background-color: rgba(0, 0, 0, 1);
     color: #ffffff;
     font-weight: 500;
+}
+
+
+
+
+/* ===== webDevelopmentSection styles start ===== */
+main .webDevelopmentSection{
+    width: 940px;
+    margin: 0 auto;
+    padding: 80px;
+    margin-top: 70px;
+    /* border: 1px solid red; */
+}
+main .webDevelopmentSection .webDevelopmentSectionHeading{
+    text-align: center;
+}
+main .webDevelopmentSection .webDevelopmentSectionHeading h1{
+    font-size: 25px;
+    font-weight: 700;
+}
+main .webDevelopmentSection .webDevelopmentSectionHeading p{
+    margin: 20px 0;
+    color: rgb(45, 51, 65);
+}
+
+main .webDevelopmentSection .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0;
+    /* border: 1px solid green; */
+}
+main .webDevelopmentSection .container .contentDiv{
+    padding-right: 30px;
+}
+main .webDevelopmentSection .container h2{
+    font-weight: 600;
+    color: rgba(13, 19, 33, 0.7);
+}
+main .webDevelopmentSection .container p{
+    margin: 15px 0;
+    color: rgb(45, 51, 65);
+}
+main .webDevelopmentSection .container a{
+    padding: 12px 25px;
+    border: 1px solid gray;
+    display: inline-block;
+    outline: none;
+    border-radius: 5px;
+    color: #ffffff;
+    font-weight: 500;
+    color: rgb(13, 19, 33);
+}
+
+main .webDevelopmentSection .container .imageDiv{
+    width: 250px;
+}
+main .webDevelopmentSection .container .imageDiv img{
+    width: 100%;
+}
+
+main .webDevelopmentSection .webDevSection2{
+    flex-direction: row-reverse;
+}
+main .webDevelopmentSection .webDevSection2 .contentDiv{
+    padding-left: 30px;
+    padding-right: 0;
 }
