--- a/css/style.css
+++ b/css/style.css
@@ -298,10 +298,11 @@ header .headerSection button{
     height: 310px;
     margin: 0 auto;
     border-radius: 20px;
-    background-image: url('/assets/handshake.jpg');
+    background-image: url(/hands.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    background-color: rgba(13, 19, 33, 0.6);
+    background-position: center;
+    background-color: rgba(13, 19, 33, 0.3);
     background-blend-mode: overlay;
 
     display: flex;
@@ -341,17 +342,21 @@ header .headerSection button{
     font-size: 14px;
     color: rgb(193, 200, 216);
 }
-/* needSupport styles ends */
+/* ===== needSupport styles ends ===== */
 
 
 
 /* ===== footer styles starts */
 footer{
     margin-top: 80px;
-    padding: 35px 120px;
+    /* padding: 35px 120px; */
     background-color: rgba(221, 221, 224, 0.534);
 }
 footer section{
+    width: 940px;
+    margin: 0 auto;
+    padding: 30px 0;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
