a tag replace by button

--- a/css/style.css
+++ b/css/style.css
@@ -102,9 +102,9 @@ header .headerSection button{
     margin: 15px 0;
     color: rgb(45, 51, 65);
 }
-.webDevelopmentSection .container a{
+.webDevelopmentSection .container button{
     padding: 12px 25px;
-    border: 1px solid gray;
+    /* border: 1px solid gray; */
     display: inline-block;
     outline: none;
     border-radius: 5px;
