--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ li{
     height: 310px;
     margin: 0 auto;
     border-radius: 20px;
-    background-image: url('./assets/hands.jpg');
+    background-image: url('../assets/hands.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
